Removed unnecessary code, adjusted layout

--- a/css/templatemo-tiya-golf-club.css
+++ b/css/templatemo-tiya-golf-club.css
@@ -1047,7 +1047,7 @@ strong {
 -----------------------------------------*/
 .site-footer {
   position: relative;
-  padding-bottom: 200px;
+  padding-bottom: 100px;
 }
 
 .site-footer .container {
@@ -1060,6 +1060,7 @@ strong {
   bottom: 0;
   right: 0;
   left: 0;
+  top: 0;
   pointer-events: none;
 }
 
